增加google的统计代码

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link rel="icon" type="image/png" href="/favicon.png">
     <link rel="apple-touch-icon" href="/favicon.png">
     
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://arcraiderskill.com/">
+    
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="Skill Tree - Custom Combat Styles">
@@ -92,5 +95,16 @@
   <body>
     <div id="root"></div>
   <script type="module" src="/index.tsx"></script>
+
+  <!-- Google tag (gtag.js) -->
+  <div style="display: none">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LE151Y4ZR0"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-LE151Y4ZR0');
+    </script>
+  </div>
 </body>
 </html>
