--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <meta name="description" content="ARC Raiders Skill Tree build. Master Conditioning, Mobility, and Survival skills for the ultimate ARC Raiders combat style.">
     <meta name="keywords" content="ARC Skill Tree, best skill tree, game guide, skill builds, build guide">
     <meta name="author" content="ARC Raiders Player">
-    
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/favicon.png">
-    <link rel="apple-touch-icon" href="/favicon.png">
+    <!--Icon-->
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link rel="manifest" href="/site.webmanifest">
+
     
     <!-- Canonical URL -->
     <link rel="canonical" href="https://arcraiderskill.com/">
@@ -106,5 +108,14 @@
       gtag('config', 'G-LE151Y4ZR0');
     </script>
   </div>
+
+  <!-- Microsoft Clarity -->
+  <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "r8l0yfjeqd");
+  </script>
 </body>
 </html>
