--- a/public/wiki.html
+++ b/public/wiki.html
@@ -137,6 +137,15 @@
       gtag('config', 'G-LE151Y4ZR0');
     </script>
   </div>
+
+  <!-- Microsoft Clarity -->
+  <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "r8l0yfjeqd");
+  </script>
 </body>
 </html>
 
