--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ARC Raiders Skill Tree - Custom Combat Styles & Build Planner</title>
+    <title>ARC Raiders Skill Trees Builder,Create & Guides</title>
     <meta name="description" content="ARC Raiders Skill Tree build. Master Conditioning, Mobility, and Survival skills for the ultimate ARC Raiders combat style.">
     <meta name="keywords" content="ARC Skill Tree, best skill tree, game guide, skill builds, build guide">
     <meta name="author" content="ARC Raiders Player">
