--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="manifest" href="/site.webmanifest">
-
+    <link rel="icon" href="/favicon.ico">
     
     <!-- Canonical URL -->
     <link rel="canonical" href="https://arcraiderskill.com/">
