--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
     <meta name="twitter:title" content="ARC Skill Tree - Best Builds">
     <meta name="twitter:description" content="ARC Raiders Tree guide with best build recommendations">
 
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9774598933307185"
+         crossorigin="anonymous"></script>
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;500;600;700;800&family=Urbanist:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script>
