--- a/public/wiki.html
+++ b/public/wiki.html
@@ -8,6 +8,11 @@
   <link rel="canonical" href="https://arcraiderskill.com/wiki.html" />
   <link rel="icon" type="image/png" href="/favicon.png">
   <link rel="apple-touch-icon" href="/favicon.png">
+
+  <!-- Google AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9774598933307185"
+       crossorigin="anonymous"></script>
+
   <style>
     :root {
       color-scheme: dark;
