--- a/public/blog.html
+++ b/public/blog.html
@@ -10,7 +10,11 @@
   <link rel="canonical" href="https://arcraiderskill.com/blog.html" />
   <link rel="icon" type="image/png" href="/favicon.png">
   <link rel="apple-touch-icon" href="/favicon.png">
-  
+
+  <!-- Google AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9774598933307185"
+       crossorigin="anonymous"></script>
+
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="article" />
     <meta property="og:title" content="ARC Raiders Skill Tree Guide: Best Builds 2025" />
