增加blog gallary，统一导航

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ARC Raiders Skill Trees Builder,Create & Guides</title>
-    <meta name="description" content="ARC Raiders Skill Tree build. Master Conditioning, Mobility, and Survival skills for the ultimate ARC Raiders combat style.">
+    <title>ARC Raiders Skill Trees Builder, Create Skill Trees Builder,Create & Guides Guides</title>
+    <meta name="description" content="Build and optimize your ARC Raiders skill tree with our interactive calculator. Master Conditioning, Mobility, and Survival branches with expert build recommendations and comprehensive guides.">
     <meta name="keywords" content="ARC Skill Tree, best skill tree, game guide, skill builds, build guide">
     <meta name="author" content="ARC Raiders Player">
     <!--Icon-->
