--- a/public/blog.html
+++ b/public/blog.html
@@ -1,11 +1,78 @@
-<!DOCTYPE html><html lang="en"><head>  <meta charset="UTF-8">  <meta name="viewport" content="width=device-width, initial-scale=1.0">  <title>Blog | ARC Raiders</title>  <meta name="description" content="ARC Raiders Skill Tree Blog">  <link rel="icon" href="/favicon.png">  <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;500;600;700;800&family=Urbanist:wght@300;400;500;600;700&display=swap" rel="stylesheet">  <style>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Blog | ARC Raiders</title>
+  <meta name="description" content="ARC Raiders Skill Tree Blog">
+  <link rel="icon" href="/favicon.png">
+  <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;500;600;700;800&family=Urbanist:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
+    :root {
+      --arc-bg: #050505;
+      --arc-panel: #0f0f11;
+      --arc-mob: #d19a53;
+    }
     body {
-      font-family: 'Urbanist', -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background: #050505;
+      font-family: 'Urbanist', sans-serif;
+      background: var(--arc-bg);
       color: #e5e5e5;
       line-height: 1.6;
+      padding-top: 64px;
     }
+
+    /* Navigation - EXACT SAME AS HOMEPAGE */
+    nav {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      background: rgba(5, 5, 5, 0.9);
+      backdrop-filter: blur(12px);
+      z-index: 50;
+      border-bottom: 1px solid #18181b;
+      padding: 0.75rem 0;
+    }
+    .nav-content {
+      max-width: 1280px;
+      margin: 0 auto;
+      padding: 0 1.5rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .nav-brand {
+      display: flex;
+      align-items: center;
+      gap: 0.75rem;
+      color: var(--arc-mob);
+      font-family: 'Barlow', sans-serif;
+      font-weight: 700;
+      font-size: 1.25rem;
+      text-decoration: none;
+    }
+    .nav-brand img {
+      height: 40px;
+      width: auto;
+    }
+    .nav-links {
+      display: flex;
+      gap: 2rem;
+    }
+    .nav-link {
+      color: #d4d4d8;
+      text-decoration: none;
+      font-weight: 500;
+      font-size: 0.875rem;
+      transition: color 0.2s;
+    }
+    .nav-link:hover {
+      color: var(--arc-mob);
+    }
+    @media (max-width: 767px) {
+      .nav-links { display: none; }
+    }
+
     .blog-container {
       max-width: 1400px;
       margin: 0 auto;
@@ -42,15 +109,15 @@
       margin-top: 2rem;
     }
     .blog-card {
-      background: #0f0f11;
-      border: 1px solid #1f1f23;
+      background: var(--arc-panel);
+      border: 1px solid #27272a;
       border-radius: 12px;
       overflow: hidden;
       transition: all 0.3s ease;
     }
     .blog-card:hover {
       transform: translateY(-4px);
-      border-color: #d19a53;
+      border-color: var(--arc-mob);
       box-shadow: 0 20px 40px rgba(0, 0, 0, 0.4);
     }
     .blog-card-link {
@@ -135,7 +202,7 @@
       display: inline-block;
       padding: 0.25rem 0.75rem;
       background: #1a1a1d;
-      color: #d19a53;
+      color: var(--arc-mob);
       font-size: 0.75rem;
       font-weight: 500;
       border-radius: 4px;
@@ -165,21 +232,160 @@
         grid-template-columns: repeat(2, 1fr);
       }
     }
-</style></head><body>  <div class="blog-container">    <header class="blog-header">      <h1 class="blog-title">ARC Raiders Skill Tree Blog</h1>      <p class="blog-subtitle">Guides, updates, and tips to master your skill tree</p>      <div class="blog-count">2 posts published</div>    </header>    <section class="blog-grid">
+  </style>
+</head>
+<body>
+  <nav>
+    <div class="nav-content">
+      <a href="/" class="nav-brand">
+        <img src="/apple-touch-icon.png" alt="ARC Raiders" />
+        ARC Raiders Skill Tree Builder
+      </a>
+      <div class="nav-links">
+        <a href="/wiki.html" class="nav-link">Wiki</a>
+        <a href="/blog.html" class="nav-link">Blog</a>
+        <a href="/faq.html" class="nav-link">FAQ</a>
+        <a href="/screenshots.html" class="nav-link">Gallery</a>
+      </div>
+    </div>
+  </nav>
+
+  <div class="blog-container">
+    <header class="blog-header">
+      <h1 class="blog-title">ARC Raiders Skill Tree Blog</h1>
+      <p class="blog-subtitle">Guides, updates, and tips to master your skill tree</p>
+      <div class="blog-count">8 posts published</div>
+    </header>
+    <section class="blog-grid">
+      
+    <article class="blog-card">
+      <a href="/blog/beginners-complete-guide.html" class="blog-card-link">
+        <div class="blog-card-image-wrapper">
+          <img src="/images/blog-arc-news1.webp" alt="ARC Raiders Skill Tree Complete Beginner's Guide 2025" class="blog-card-image" loading="lazy" />
+          <div class="blog-card-overlay"></div>
+        </div>
+        <div class="blog-card-content">
+          <div class="blog-card-meta">
+            <time>January 5, 2026</time>
+            <span class="blog-card-divider">•</span>
+            <span>8 min read</span>
+          </div>
+          <h2 class="blog-card-title">ARC Raiders Skill Tree Complete Beginner's Guide 2025</h2>
+          <p class="blog-card-excerpt">New to ARC Raiders? This complete beginner's guide teaches you everything about the skill tree system. Learn how to allocate points, choose branches, and create your first build.</p>
+          <div class="blog-card-tags"><span class="tag">beginner</span><span class="tag">guide</span><span class="tag">tutorial</span></div>
+        </div>
+      </a>
+    </article>
+  
+    <article class="blog-card">
+      <a href="/blog/mobility-mastery-guide.html" class="blog-card-link">
+        <div class="blog-card-image-wrapper">
+          <img src="/images/blog-arc-news1.webp" alt="Mobility Branch Mastery: Speed, Evasion, and Positioning in ARC Raiders" class="blog-card-image" loading="lazy" />
+          <div class="blog-card-overlay"></div>
+        </div>
+        <div class="blog-card-content">
+          <div class="blog-card-meta">
+            <time>January 5, 2026</time>
+            <span class="blog-card-divider">•</span>
+            <span>7 min read</span>
+          </div>
+          <h2 class="blog-card-title">Mobility Branch Mastery: Speed, Evasion, and Positioning in ARC Raiders</h2>
+          <p class="blog-card-excerpt">Master the Mobility skill tree branch in ARC Raiders. Learn advanced movement techniques, dodge rolling, vaulting, and flanking strategies for aggressive players.</p>
+          <div class="blog-card-tags"><span class="tag">guide</span><span class="tag">mobility</span><span class="tag">pvp</span></div>
+        </div>
+      </a>
+    </article>
+  
+    <article class="blog-card">
+      <a href="/blog/skill-tree-mechanics-deep-dive.html" class="blog-card-link">
+        <div class="blog-card-image-wrapper">
+          <img src="/images/blog-arc-news1.webp" alt="ARC Raiders Skill Tree Mechanics: Deep Dive into Numbers" class="blog-card-image" loading="lazy" />
+          <div class="blog-card-overlay"></div>
+        </div>
+        <div class="blog-card-content">
+          <div class="blog-card-meta">
+            <time>January 5, 2026</time>
+            <span class="blog-card-divider">•</span>
+            <span>6 min read</span>
+          </div>
+          <h2 class="blog-card-title">ARC Raiders Skill Tree Mechanics: Deep Dive into Numbers</h2>
+          <p class="blog-card-excerpt">Advanced mathematical analysis of ARC Raiders skill tree mechanics. Learn exactly how damage reduction, stacking, and hidden mechanics work behind the scenes.</p>
+          <div class="blog-card-tags"><span class="tag">advanced</span><span class="tag">mechanics</span><span class="tag">math</span></div>
+        </div>
+      </a>
+    </article>
+  
+    <article class="blog-card">
+      <a href="/blog/survival-branch-complete-guide.html" class="blog-card-link">
+        <div class="blog-card-image-wrapper">
+          <img src="/images/blog-arc-news1.webp" alt="Survival Branch Complete Guide: Looting, Crafting, and Solo Play" class="blog-card-image" loading="lazy" />
+          <div class="blog-card-overlay"></div>
+        </div>
+        <div class="blog-card-content">
+          <div class="blog-card-meta">
+            <time>January 5, 2026</time>
+            <span class="blog-card-divider">•</span>
+            <span>7 min read</span>
+          </div>
+          <h2 class="blog-card-title">Survival Branch Complete Guide: Looting, Crafting, and Solo Play</h2>
+          <p class="blog-card-excerpt">Master the Survival skill tree in ARC Raiders. Learn looting strategies, inventory management, crafting efficiency, and stealth techniques for solo players.</p>
+          <div class="blog-card-tags"><span class="tag">guide</span><span class="tag">survival</span><span class="tag">solo</span></div>
+        </div>
+      </a>
+    </article>
+  
+    <article class="blog-card">
+      <a href="/blog/top-5-meta-builds.html" class="blog-card-link">
+        <div class="blog-card-image-wrapper">
+          <img src="/images/blog-arc-news1.webp" alt="Top 5 ARC Raiders Skill Tree Meta Builds (January 2025)" class="blog-card-image" loading="lazy" />
+          <div class="blog-card-overlay"></div>
+        </div>
+        <div class="blog-card-content">
+          <div class="blog-card-meta">
+            <time>January 5, 2026</time>
+            <span class="blog-card-divider">•</span>
+            <span>7 min read</span>
+          </div>
+          <h2 class="blog-card-title">Top 5 ARC Raiders Skill Tree Meta Builds (January 2025)</h2>
+          <p class="blog-card-excerpt">Discover the most effective and popular ARC Raiders skill tree builds in the current meta. Includes tank, DPS, solo, and team compositions optimized for Update 1.7.2.</p>
+          <div class="blog-card-tags"><span class="tag">builds</span><span class="tag">meta</span><span class="tag">optimization</span></div>
+        </div>
+      </a>
+    </article>
+  
+    <article class="blog-card">
+      <a href="/blog/ultimate-conditioning-guide.html" class="blog-card-link">
+        <div class="blog-card-image-wrapper">
+          <img src="/images/blog-arc-news1.webp" alt="Ultimate Guide to Conditioning Branch in ARC Raiders Skill Tree" class="blog-card-image" loading="lazy" />
+          <div class="blog-card-overlay"></div>
+        </div>
+        <div class="blog-card-content">
+          <div class="blog-card-meta">
+            <time>January 5, 2026</time>
+            <span class="blog-card-divider">•</span>
+            <span>6 min read</span>
+          </div>
+          <h2 class="blog-card-title">Ultimate Guide to Conditioning Branch in ARC Raiders Skill Tree</h2>
+          <p class="blog-card-excerpt">Complete guide to the Conditioning skill branch in ARC Raiders. Learn how to maximize stamina efficiency, shield recovery, and survival sustainability for tank builds.</p>
+          <div class="blog-card-tags"><span class="tag">guide</span><span class="tag">conditioning</span><span class="tag">tank</span></div>
+        </div>
+      </a>
+    </article>
+  
     <article class="blog-card">
       <a href="/blog/arc-raiders-1-7-2-update.html" class="blog-card-link">
         <div class="blog-card-image-wrapper">
-          <img src="/images/blog/blog-arc-news1.webp" alt="ARC Raiders Update 1.7.2: Blueprint Adjustments & Hidden Bunker Returns" class="blog-card-image" loading="lazy" onerror="this.src='data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" width="800" height="450" viewBox="0 0 800 450"%3E%3Crect fill="%230f0f11" width="800" height="450"/%3E%3Ctext x="50%25" y="50%25" dominant-baseline="middle" text-anchor="middle" font-family="Arial" font-size="48" fill="%23d19a53"%3EARC RAIDERS%3C/text%3E%3Ctext x="50%25" y="58%25" dominant-baseline="middle" text-anchor="middle" font-family="Arial" font-size="24" fill="%239ca3af"%3EBlog Post%3C/text%3E%3C/svg%3E'" />
+          <img src="/images/blog-arc-news1.webp" alt="ARC Raiders Update 1.7.2: Blueprint Adjustments & Hidden Bunker Returns" class="blog-card-image" loading="lazy" />
           <div class="blog-card-overlay"></div>
         </div>
         <div class="blog-card-content">
           <div class="blog-card-meta">
             <time>December 18, 2025</time>
             <span class="blog-card-divider">•</span>
-            <span>1 min read</span>
+            <span>4 min read</span>
           </div>
           <h2 class="blog-card-title">ARC Raiders Update 1.7.2: Blueprint Adjustments & Hidden Bunker Returns</h2>
-          <p class="blog-card-excerpt">ARC Raiders Update 1.7.2 is here! Hidden Bunker returns, blueprint drop rates optimized, and numerous bug fixes for smoother gameplay experience.</p>
+          <p class="blog-card-excerpt">ARC Raiders Update 1.7.2 released! Hidden Bunker returns with optimized blueprint drop rates. Includes critical bug fixes for interactions, indoor cold damage, and quest system improvements.</p>
           <div class="blog-card-tags"><span class="tag">update</span><span class="tag">patch</span><span class="tag">hotfix</span></div>
         </div>
       </a>
@@ -188,7 +394,7 @@
     <article class="blog-card">
       <a href="/blog/north-line-update.html" class="blog-card-link">
         <div class="blog-card-image-wrapper">
-          <img src="/images/blog/blog-arc-news1.webp" alt="ARC Raiders North Line Update 1.2.0: Stella Montis Map Live" class="blog-card-image" loading="lazy" onerror="this.src='data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" width="800" height="450" viewBox="0 0 800 450"%3E%3Crect fill="%230f0f11" width="800" height="450"/%3E%3Ctext x="50%25" y="50%25" dominant-baseline="middle" text-anchor="middle" font-family="Arial" font-size="48" fill="%23d19a53"%3EARC RAIDERS%3C/text%3E%3Ctext x="50%25" y="58%25" dominant-baseline="middle" text-anchor="middle" font-family="Arial" font-size="24" fill="%239ca3af"%3EBlog Post%3C/text%3E%3C/svg%3E'" />
+          <img src="/images/blog-arc-news1.webp" alt="ARC Raiders North Line Update 1.2.0: Stella Montis Map Live" class="blog-card-image" loading="lazy" />
           <div class="blog-card-overlay"></div>
         </div>
         <div class="blog-card-content">
@@ -203,4 +409,8 @@
         </div>
       </a>
     </article>
-  </section>  </div></body></html>
+  
+    </section>
+  </div>
+</body>
+</html>
