--- a/public/blog.html
+++ b/public/blog.html
@@ -261,7 +261,7 @@
     <article class="blog-card">
       <a href="/blog/beginners-complete-guide.html" class="blog-card-link">
         <div class="blog-card-image-wrapper">
-          <img src="/images/blog-arc-news1.webp" alt="ARC Raiders Skill Tree Complete Beginner's Guide 2025" class="blog-card-image" loading="lazy" />
+          <img src="/images/blog-arc-news1.webp" alt="ARC Raiders Skill Tree Complete Beginner's Guide 2025" class="blog-card-image" loading="lazy" decoding="async" />
           <div class="blog-card-overlay"></div>
         </div>
         <div class="blog-card-content">
@@ -280,7 +280,7 @@
     <article class="blog-card">
       <a href="/blog/mobility-mastery-guide.html" class="blog-card-link">
         <div class="blog-card-image-wrapper">
-          <img src="/images/blog-arc-news1.webp" alt="Mobility Branch Mastery: Speed, Evasion, and Positioning in ARC Raiders" class="blog-card-image" loading="lazy" />
+          <img src="/images/blog-arc-news1.webp" alt="Mobility Branch Mastery: Speed, Evasion, and Positioning in ARC Raiders" class="blog-card-image" loading="lazy" decoding="async" />
           <div class="blog-card-overlay"></div>
         </div>
         <div class="blog-card-content">
@@ -299,7 +299,7 @@
     <article class="blog-card">
       <a href="/blog/skill-tree-mechanics-deep-dive.html" class="blog-card-link">
         <div class="blog-card-image-wrapper">
-          <img src="/images/blog-arc-news1.webp" alt="ARC Raiders Skill Tree Mechanics: Deep Dive into Numbers" class="blog-card-image" loading="lazy" />
+          <img src="/images/blog-arc-news1.webp" alt="ARC Raiders Skill Tree Mechanics: Deep Dive into Numbers" class="blog-card-image" loading="lazy" decoding="async" />
           <div class="blog-card-overlay"></div>
         </div>
         <div class="blog-card-content">
@@ -318,7 +318,7 @@
     <article class="blog-card">
       <a href="/blog/survival-branch-complete-guide.html" class="blog-card-link">
         <div class="blog-card-image-wrapper">
-          <img src="/images/blog-arc-news1.webp" alt="Survival Branch Complete Guide: Looting, Crafting, and Solo Play" class="blog-card-image" loading="lazy" />
+          <img src="/images/blog-arc-news1.webp" alt="Survival Branch Complete Guide: Looting, Crafting, and Solo Play" class="blog-card-image" loading="lazy" decoding="async" />
           <div class="blog-card-overlay"></div>
         </div>
         <div class="blog-card-content">
@@ -337,7 +337,7 @@
     <article class="blog-card">
       <a href="/blog/top-5-meta-builds.html" class="blog-card-link">
         <div class="blog-card-image-wrapper">
-          <img src="/images/blog-arc-news1.webp" alt="Top 5 ARC Raiders Skill Tree Meta Builds (January 2025)" class="blog-card-image" loading="lazy" />
+          <img src="/images/blog-arc-news1.webp" alt="Top 5 ARC Raiders Skill Tree Meta Builds (January 2025)" class="blog-card-image" loading="lazy" decoding="async" />
           <div class="blog-card-overlay"></div>
         </div>
         <div class="blog-card-content">
@@ -356,7 +356,7 @@
     <article class="blog-card">
       <a href="/blog/ultimate-conditioning-guide.html" class="blog-card-link">
         <div class="blog-card-image-wrapper">
-          <img src="/images/blog-arc-news1.webp" alt="Ultimate Guide to Conditioning Branch in ARC Raiders Skill Tree" class="blog-card-image" loading="lazy" />
+          <img src="/images/blog-arc-news1.webp" alt="Ultimate Guide to Conditioning Branch in ARC Raiders Skill Tree" class="blog-card-image" loading="lazy" decoding="async" />
           <div class="blog-card-overlay"></div>
         </div>
         <div class="blog-card-content">
@@ -375,14 +375,14 @@
     <article class="blog-card">
       <a href="/blog/arc-raiders-1-7-2-update.html" class="blog-card-link">
         <div class="blog-card-image-wrapper">
-          <img src="/images/blog-arc-news1.webp" alt="ARC Raiders Update 1.7.2: Blueprint Adjustments & Hidden Bunker Returns" class="blog-card-image" loading="lazy" />
+          <img src="/images/blog-arc-news1.webp" alt="ARC Raiders Update 1.7.2: Blueprint Adjustments & Hidden Bunker Returns" class="blog-card-image" loading="lazy" decoding="async" />
           <div class="blog-card-overlay"></div>
         </div>
         <div class="blog-card-content">
           <div class="blog-card-meta">
             <time>December 18, 2025</time>
             <span class="blog-card-divider">•</span>
-            <span>4 min read</span>
+            <span>5 min read</span>
           </div>
           <h2 class="blog-card-title">ARC Raiders Update 1.7.2: Blueprint Adjustments & Hidden Bunker Returns</h2>
           <p class="blog-card-excerpt">ARC Raiders Update 1.7.2 released! Hidden Bunker returns with optimized blueprint drop rates. Includes critical bug fixes for interactions, indoor cold damage, and quest system improvements.</p>
@@ -394,7 +394,7 @@
     <article class="blog-card">
       <a href="/blog/north-line-update.html" class="blog-card-link">
         <div class="blog-card-image-wrapper">
-          <img src="/images/blog-arc-news1.webp" alt="ARC Raiders North Line Update 1.2.0: Stella Montis Map Live" class="blog-card-image" loading="lazy" />
+          <img src="/images/blog-arc-news1.webp" alt="ARC Raiders North Line Update 1.2.0: Stella Montis Map Live" class="blog-card-image" loading="lazy" decoding="async" />
           <div class="blog-card-overlay"></div>
         </div>
         <div class="blog-card-content">
